docker_images/databases/postgresql/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgresql
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`placeholder.dockify.cloud`)
      services:
        - name: postgresql
          port: 5432
  tls:
    secretName: wildcard-w1-dockify-cloud-tls
    domains:
      - main: placeholder.dockify.cloud
